if (GOS_PID_ARDUINO_BASED_TUNING)
  add_subdirectory(libarduinobasedautotuning)
endif (GOS_PID_ARDUINO_BASED_TUNING)

if (GOS_PID_TOOLKIT_CPP)
  add_subdirectory(libpidarduinomodbusmaster)
  add_subdirectory(libpidtuningblackbox)
  add_subdirectory(libpidtoolkit)
  add_subdirectory(libpidtoolkittune)
  add_subdirectory(libpidtoolkitpid)
  add_subdirectory(pidblackboxtuning)
  if (GOS_PID_TOOLKIT_UI)
    add_subdirectory(libpidtoolkituiconfiguration)
    add_subdirectory(libpidtoolkituiviewmodel)
    add_subdirectory(libpidtoolkituimodel)
    add_subdirectory(libpidtoolkitui)
    add_subdirectory(pidtoolkitplugin)
    add_subdirectory(pidtoolkitui)
  endif ()
endif (GOS_PID_TOOLKIT_CPP)
